tests/algorithms/transpiler/CPP/graphs/finding_bridges.error
parse: error[P001]: /workspace/mochi/tests/github/TheAlgorithms/Mochi/graphs/finding_bridges.mochi:29:7: unexpected token "else" (expected "{" Statement* "}" (("else" IfStmt) | ("else" "{" Statement* "}"))?)
  --> /workspace/mochi/tests/github/TheAlgorithms/Mochi/graphs/finding_bridges.mochi:29:7

 29 |     } else if !visited[to] {
    |       ^

help:
  Check for a missing `{` or `}` to close the block.